[gd_scene load_steps=4 format=3 uid="uid://d1ips7kkkffy8"]

[ext_resource type="PackedScene" uid="uid://cvaxexodl6oll" path="res://scenes/large_button.tscn" id="1_3afhu"]
[ext_resource type="Script" uid="uid://bihkhtnnun5k0" path="res://scripts/single_finger_button.gd" id="1_wlcxq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rwgxs"]
load_path = "res://.godot/imported/finger point.png-dbf02fe045a85e2cff6dc99f3409d001.ctex"

[node name="SingleFingerButton" type="Node2D"]
script = ExtResource("1_wlcxq")

[node name="LargeButton" parent="." instance=ExtResource("1_3afhu")]

[node name="FingerPoint" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(16, -57)
rotation = 1.5708
texture = SubResource("CompressedTexture2D_rwgxs")
flip_v = true
